--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/luxologo.png" alt="Logo" />
+            <img src="luxologo.png" alt="Logo" />
         </div>
         <nav>
             <ul class="main-nav">
@@ -116,4 +116,5 @@
     </footer>
 
 </body>
+
 </html>
