--- a/servicios-villas.html
+++ b/servicios-villas.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/luxologo.png" alt="Logo" />
+            <img src="luxologo.png" alt="Logo" />
         </div>
         <nav>
             <ul class="main-nav">
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
